# verdict

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
docs/: demo.cast  judge_calibration.md
examples/: eval_simple_rag.py
scripts/: demo.sh
tests/: __init__.py
tests/qa/: __init__.py  judge_calibration.json  test_judge_calibration.py
tests/security/: test_adaptive_boundary.py
tests/smoke/: test_base_adapter.py
tests/unit/: test_adaptive.py
verdict/: __init__.py  cli.py
verdict/adapters/: __init__.py  base.py  simple_rag.py
verdict/agents/: __init__.py  adaptive_generator.py  executor.py  judge.py  reporter.py  test_generator.py
verdict/agents/prompts/: __init__.py  judge_prompt.py  reporter_prompt.py  test_generator_prompt.py
verdict/analysis/: __init__.py  flakiness.py
verdict/caching/: __init__.py  backends.py  cache.py
verdict/cli/: __init__.py
verdict/cli_utils/: guardrails.py
verdict/config/: __init__.py  settings.py
verdict/costs/: __init__.py  calculator.py  pricing.py
verdict/crews/: __init__.py
verdict/evals/: __init__.py  categories.py  rubrics.py
verdict/evals/attack_patterns/: patterns.json
verdict/models/: __init__.py  schemas.py
verdict/observability/: __init__.py  token_tracker.py
verdict/orchestration/: __init__.py  diff.py
verdict/reports/: __init__.py  builder.py
verdict/stats/: __init__.py  bootstrap.py
verdict/tasks/: __init__.py
