[tool.poetry]
name = "verdict-eval"
version = "0.1.0"
description = "Evaluation infrastructure for AI agents."
authors = ["Dan Nicolau"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dannicolau7/verdict"
repository = "https://github.com/dannicolau7/verdict"
keywords = ["ai", "evaluation", "agents", "llm", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
packages = [{include = "verdict"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
crewai = "1.14.5"
langchain-anthropic = "1.4.3"
pydantic = ">=2.11.9,<2.13"
pydantic-settings = ">=2.6.0,<3.0"
python-dotenv = "^1.2.2"
click = ">=8.1.7,<8.2.0"
rich = ">=13.7.0,<15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
mypy = "^2.1.0"
ruff = "^0.15.13"
black = "^26.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "examples/"]
