[tool.poetry]
name = "verdict-eval"
version = "0.1.3"
description = "Evaluation infrastructure for AI agents."
authors = ["Dan Nicolau <dan@dannicolau.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dannicolau7/verdict"
repository = "https://github.com/dannicolau7/verdict"
documentation = "https://github.com/dannicolau7/verdict#readme"
keywords = ["ai", "evaluation", "agents", "llm", "crewai", "testing", "compliance", "red-teaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
packages = [{include = "verdict"}]

[tool.poetry.scripts]
verdict = "verdict.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic = ">=2.11.9,<2.13"
pydantic-settings = ">=2.6.0,<3.0"
python-dotenv = "^1.2.2"
click = ">=8.1.7,<8.2.0"
rich = ">=13.7.0,<15.0"
anthropic = ">=0.40.0"

# Optional: CrewAI integration (required for D9 crew assembly)
crewai = {version = "1.14.5", optional = true}
langchain-anthropic = {version = "1.4.3", optional = true}

[tool.poetry.extras]
crewai = ["crewai", "langchain-anthropic"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
mypy = "^2.1.0"
ruff = "^0.15.13"
black = "^26.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "examples/"]
